First working update!

--- a/templates/config-quickedit.html.twig
+++ b/templates/config-quickedit.html.twig
@@ -1,1 +1,5 @@
 <span id="config-quickedit-replace">{{ inner }}</span>
+{# Visually hidden link to trigger refreshless reload
+@todo Create JS way to refresh page
+#}
+<a href="/" class="visually-hidden" id="config-quickedit-refresh">Refresh</a>
